<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AddCounterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/AddCounter"
        android:textColor="@color/colorTextOnBackground"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/Zählername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="20dp"
        android:hint="@string/Zählername"
        android:textColor="@color/colorTextOnBackground"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ZählerstandBeginn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/StartStandNeuerZähler"
            android:textColor="@color/colorTextOnBackground"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kWh"
            android:textColor="@color/colorTextOnBackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/PreisProEinheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:textColor="@color/colorTextOnBackground"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/textViewPreisEinheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextOnBackground"/>

    </LinearLayout>

    <Button
        android:id="@+id/ErstelltenZählerHinzufügen"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AddCounter"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextOnSecondary"/>

</LinearLayout>