<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100sp">

        <ProgressBar
            android:id="@+id/PBcircleJahr"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/circle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prozentAnzeigeJahr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verbraucht"
                android:textSize="24sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/aktVerbrauchJahr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/of"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/maxVerbrauchSollJahr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="2"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/used"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>